# cajlib

./: CMakeLists.txt  cajlib.cpp  testcajlib.cpp
include/: cajlib.h
include/conversion/: conversion.h
include/string/: string.h
src/: cajlib.cpp
src/conversion/: conversion.cpp
src/string/: string.cpp
